# raycaster

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
src/: cast_ray.cl  glad.cpp  main.cpp  tick_clock.cpp
